Revert "Replace deprecated methods"
This reverts commit d30f4c34488901ca012eb904bfbdc7457672850f.